# AgentDock

./: .gitignore  AGENTS.md  ASSET_NOTICES.md  LICENSE  README.md  README_DE.md  README_JA.md  README_ZH.md  SECURITY.md  THIRD_PARTY_NOTICES.md  app.css  i18n.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: desktop-build.yml
release-notes/: v0.1.18.md  v0.1.19.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.25.md  v0.1.26.md  v0.1.27.md  v0.1.28.md  v0.1.29.md  v0.1.30.md  v0.1.31.md  v0.1.32.md  v0.1.33.md  v0.1.34.md  v0.1.35.md
scripts/: build-local-release.sh  release-github.sh  release-macmini.sh  validate-release-notes.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/fixtures/: mcp-tools-server.mjs
